--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,5 +22,6 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": ["firm-interface", "firm-interface/Components", "firm-interface", "firm-interface/components"]
 }
+
