--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev:firm": "vite",
-    "dev:bank": "cd bank-interface && vite",
-    "build:firm": "tsc -b && vite build",
-    "build:bank": "cd bank-interface && vite build",
-    "build:all": "npm run build:firm && npm run build:bank",
-    "lint:firm": "eslint .",
-    "lint:bank": "cd bank-interface && eslint ."
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint:firm": "eslint ."
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-circular-progressbar": "^2.1.0",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
+    "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
