--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "vit": "^0.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
